# desktop_pet

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  MANIFEST.in  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
animations/: character.json
animations/momo_v2/: PROVENANCE.md  character.json
animations/momo_v3/: PROVENANCE.md  character.json
characters/orbit/: character.json
docs/: architecture.md  character-pack-spec-v2.md  character-pack-spec-v3.md  character-pack-spec-v4.md  feature-audit-v1.2.md  plugin-spec-v1.md  privacy-model.md  release-evidence-v0.2.md  release-evidence-v1.0.md  release-evidence-v1.2.md  tool-permission-spec-v1.md  update-spec-v1.md
packaging/: vla-pet.desktop
packaging/appimage/: AppRun
packaging/flatpak/: io.github.vlapet.Companion.yml
packaging/macos/: install.sh
packaging/windows/: install.ps1
plugins/companion-care/: README.md  plugin.json
plugins/focus-helper/: README.md  plugin.json
scripts/: install_linux.py  measure_idle_cpu.py  measure_memory.py  sign_update_manifest.py  smoke_coop.py  smoke_portal.py  smoke_vlm.py  smoke_voice.py  verify_packaging.py  verify_project.py  verify_release.py
src/vla_pet/: __init__.py  __main__.py  ai_orchestrator.py  animation.py  app.py  async_tools.py  atspi_probe.py  awareness.py  builtin_tools.py  character.py  chat_dialog.py  cli.py  companion_panel.py  contracts.py  control_center.py  diagnostics.py  errors.py  events.py  growth.py  habitat.py  life.py  mcp.py  memory.py  minigame.py  narration.py  notifications.py  observation.py  onboarding.py  openai_compatible.py  overlay.py  overlay_actions.py  paths.py  permissions.py  persistence.py  platform_adapters.py  plugin_dispatcher.py  plugins.py  policy.py  progression.py  providers.py  (+16 more)
tests/: test_awareness.py  test_foundations.py  test_interaction.py  test_minigame.py  test_narration.py  test_observation.py  test_overlay_actions.py  test_overlay_runtime.py  test_plugins.py  test_policy.py  test_providers.py  test_updater.py  test_v11_habitat.py  test_v12_growth.py  test_v1_foundations.py  test_v1_ui.py  test_voice.py  test_worker.py  test_world.py
