[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smolvla-pet-sandbox"
version = "0.1.0"
description = "A cooperative SmolVLM and SmolLM anime desktop pet"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<3",
  "pygame-ce==2.5.7",
  "PySide6>=6.7,<7",
]

[project.optional-dependencies]
models = [
  "torch>=2.2.1,<2.11",
  "transformers>=4.57,<5",
  "Pillow>=10,<13",
]
vla = [
  "lerobot[smolvla]==0.4.4",
]
dev = [
  "pytest>=8.0,<9",
]

[project.scripts]
vla-pet = "vla_pet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
